--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "node index",
     "dev": "nodemon index"
   },
-  "author": "",
+  "author": "Patrick Deck",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
